--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.2.0"
   },
   "devDependencies": {
+    "jsdoc": "^4.0.2",
     "live-server": "^1.2.2",
     "prettier": "^3.0.0-alpha.6",
     "sass": "^1.67.0"
